--- a/cluster/frontend/package.json
+++ b/cluster/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nstrumenta-app",
-  "version": "1.7.9",
+  "version": "1.7.9-fort",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 5000",
@@ -29,6 +29,7 @@
     "@angular/core": "^15.2.9",
     "@angular/fire": "^7.6.1",
     "@angular/forms": "^15.2.9",
+    "@angular/google-maps": "^15.2.8",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
