--- a/cluster/frontend/package.json
+++ b/cluster/frontend/package.json
@@ -34,6 +34,7 @@
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@mcap/core": "^1.3.0",
     "@sentry/browser": "^7.10.0",
     "core-js": "^3.24.1",
