--- a/cluster/frontend/package.json
+++ b/cluster/frontend/package.json
@@ -39,6 +39,7 @@
     "@sentry/browser": "^7.10.0",
     "core-js": "^3.24.1",
     "idb-keyval": "^6.2.0",
+    "nstrumenta": "3.1.31",
     "rxjs": "^7.5.6",
     "ts-md5": "^1.2.11",
     "tslib": "^2.4.0",
